Clean up gradle configuration