@@ -203,7 +203,6 @@ def jvmArgsWindows =
          '--add-modules=jdk.incubator.vector',   //Project Panama Vector API is still in incubator
          '--enable-native-access=ALL-UNNAMED', //Suppress unsafe warnings for FFM API Foreign Memory calls
          '--enable-native-access=javafx.graphics', //JDK24 - suppress restricted java.lang.System calls
-         '--sun-misc-unsafe-memory-access=allow', //JDK24 - suppress sun.misc.Unsafe::allocateMemory warning
          '-XX:+UseCompactObjectHeaders',   //JDK25 - use compact object headers
          '-Djava.library.path=c:\\Program Files\\SDRplay\\API\\x64'] //SDRPlay API library path
 
@@ -213,7 +212,6 @@ def jvmArgsWindows =
 def jvmArgsLinux =
         ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED', //Needed for controls-fx.jar
          '--add-modules=jdk.incubator.vector',   //Needed while Project Panama API is still in incubator
-         '--sun-misc-unsafe-memory-access=allow', //JDK24 - suppress sun.misc.Unsafe::allocateMemory warning
          '-XX:+UseCompactObjectHeaders',   //JDK25 - use compact object headers
          '--enable-native-access=javafx.graphics', //JDK24 - suppress restricted java.lang.System calls
          '--enable-native-access=ALL-UNNAMED'] //SDRPlay API library path
@@ -221,15 +219,12 @@ def jvmArgsLinux =
 /**
  * JVM Arguments for running the application on macOS.
  */
-def jvmArgsMac = jvmArgsLinux +
-        ['-Xdock:name=sdrtrunk']
+def jvmArgsMac = jvmArgsLinux
 
 def jpmsJvmArgsMac =
         ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls', //Needed for controls-fx.jar
-         '--sun-misc-unsafe-memory-access=allow', //JDK24 - suppress sun.misc.Unsafe::allocateMemory warning
          '-XX:+UseCompactObjectHeaders',   //JDK25 - use compact object headers
-         '--enable-native-access=javafx.graphics,usb4java,sdr.trunk',
-         '-Xdock:name=sdrtrunk']
+         '--enable-native-access=javafx.graphics,usb4java,sdr.trunk']
 
 application {
     mainClass = "io.github.dsheirer.gui.SDRTrunk"
@@ -492,6 +487,10 @@ if(os.isMacOsX())
 
     tasks.register('runtimeImageCurrent', Sync) {
         dependsOn('jreCurrent', 'installDist')
+
+        doFirst {
+            macRuntimeZipRootDir.get().asFile.deleteDir()
+        }
 
         into(macRuntimeZipRootDir)
         from(macInstallDistDir)
